--- a/WpfApp1/Views/MainWindow.xaml
+++ b/WpfApp1/Views/MainWindow.xaml
@@ -21,6 +21,8 @@
             FontWeight="Bold"    
             Width="100" Height="60" Margin="501,79,0,0"/>
 
+        <Button Content="Open Log File" Click="OpenLogFile_Click" />
+
         <Button x:Name="TEST2"
                 Content="Theme" 
                 Click="ThemeToggle_Click" 
